# life-admin

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: bills.py  health.py  ingestion.py  statement_analysis.py  transactions.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  bill.py  transaction.py
backend/app/schemas/: bill.py  statement.py  transaction.py
backend/app/services/: bill_extractor.py  gmail_service.py  notification_service.py  statement_analysis.py  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/docker/: Dockerfile.action  Dockerfile.agent  Dockerfile.api  Dockerfile.base  Dockerfile.ingestion  Dockerfile.ingestion-beat  Dockerfile.processor
infra/grafana/: prometheus.yml  tempo.yml
migrations/: 002_transactions.sql  init.sql
mobile/: README.md  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  login.tsx
mobile/components/: bill-card.tsx  statement-results.tsx  ui.tsx
mobile/lib/: api.ts  auth.tsx  config.tsx  format.ts  theme.ts  types.ts
scripts/: gmail_setup.py
services/action/: consumer.py  idempotency.py
services/agent/: consumer.py  graph.py  state.py
services/api/: main.py  security.py  transaction_extractor.py
services/ingestion/: deduplicator.py  gmail_client.py  main.py  publisher.py  s3_uploader.py  tasks.py  token_manager.py
services/processor/: bill_repository.py  classifier.py  consumer.py  extractor.py  publisher.py  validator.py
shared/db/: __init__.py  models.py  session.py
shared/kafka/: __init__.py  consumer.py  producer.py
shared/telemetry/: __init__.py  decorators.py  setup.py
shared/vault/: __init__.py  client.py
tests/: conftest.py
tests/integration/: test_api_health.py
tests/unit/: test_agent_decision.py  test_classifier.py  test_deduplicator.py  test_statement_analysis.py  test_validator.py
(+33 files in other folders)
