[build-system]
requires = ["setuptools>=70", "setuptools-scm"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "life-admin"
version = "2.0.0"
description = "Life Admin Autonomous System — Production"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "services*"]

# ─── Shared dependencies across all services ─────────────────────────────────
[project.dependencies]
# Framework
fastapi = ">=0.115"
uvicorn = {version = ">=0.30", extras = ["standard"]}

# Database
sqlalchemy = {version = ">=2.0", extras = ["asyncio"]}
asyncpg = ">=0.29"
alembic = ">=1.13"

# Cache
redis = {version = ">=5.1", extras = ["hiredis"]}

# Kafka
confluent-kafka = ">=2.5"

# Storage
boto3 = ">=1.35"          # S3 / MinIO

# AI
anthropic = ">=0.40"
langgraph = ">=0.2"
langchain-core = ">=0.3"

# Auth
PyJWT = {version = ">=2.9", extras = ["crypto"]}
cryptography = ">=43"
bcrypt = ">=4.2"

# Secrets
hvac = ">=2.3"             # HashiCorp Vault client

# Observability
opentelemetry-sdk = ">=1.27"
opentelemetry-api = ">=1.27"
opentelemetry-exporter-otlp-proto-grpc = ">=1.27"
opentelemetry-instrumentation-fastapi = ">=0.48"
opentelemetry-instrumentation-sqlalchemy = ">=0.48"
opentelemetry-instrumentation-redis = ">=0.48"
opentelemetry-instrumentation-httpx = ">=0.48"
prometheus-client = ">=0.21"
structlog = ">=24.4"

# Google
google-auth = ">=2.35"
google-auth-oauthlib = ">=1.2"
google-api-python-client = ">=2.151"

# Notifications
sendgrid = ">=6.11"
twilio = ">=9.3"

# Data processing
pydantic = ">=2.9"
pydantic-settings = ">=2.6"
beautifulsoup4 = ">=4.12"
html2text = ">=2024"
python-dateutil = ">=2.9"
bleach = ">=6.1"

# HTTP
httpx = ">=0.27"
tenacity = ">=9.0"
circuitbreaker = ">=2.0"

# Email
Jinja2 = ">=3.1"

# Utilities
python-dotenv = ">=1.0"
pytz = ">=2024"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
